package exceptions;

public class DuplicateElementException extends Exception {
    public DuplicateElementException(String message) {
        super(message);
    }
}