package exceptions;

public class MissingBlockSupportException extends Exception {
    public MissingBlockSupportException(String message) {
        super(message);
    }
}